--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -1,6 +1,39 @@
-body{
-    main{
+main{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    .finished,.wip{
         display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
+        background-color: rgb(167, 167, 167);
+        border-radius: var(--bradius);
+        margin: 20px;
+    }
+    .project{
+        position: relative;
+        margin: 20px;
+        background-color: gray;
+        width: 400px;
+        height: 800px;
+        z-index: 1;
+        border-radius: var(--bradius);
+        overflow: hidden;
+        overflow-y: scroll;
+        scrollbar-width: none;
+        box-shadow: 0px 0px 8px 0px #000000;
+        iframe{
+            scrollbar-width: none;
+            overflow: hidden;
+            z-index: 10;
+            position: absolute;
+            border-radius: var(--bradius);
+            width: 100%;
+            height: 100%;
+            
         
+            box-sizing: content-box; 
+        }
     }
 }
