--- a/style.css
+++ b/style.css
@@ -1,5 +1,74 @@
-body main {
+:root {
+  --bradius: 25px;
+}
+
+body {
+  margin: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  padding: 0;
+  background-color: #5d5d5d;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+main {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+main .finished, main .wip {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  background-color: #a7a7a7;
+  border-radius: var(--bradius);
+  margin: 20px;
+}
+
+main .project {
+  position: relative;
+  margin: 20px;
+  background-color: gray;
+  width: 400px;
+  height: 800px;
+  z-index: 1;
+  border-radius: var(--bradius);
+  overflow: hidden;
+  overflow-y: scroll;
+  scrollbar-width: none;
+  -webkit-box-shadow: 0px 0px 8px 0px #000000;
+          box-shadow: 0px 0px 8px 0px #000000;
+}
+
+main .project iframe {
+  scrollbar-width: none;
+  overflow: hidden;
+  z-index: 10;
+  position: absolute;
+  border-radius: var(--bradius);
+  width: 100%;
+  height: 100%;
+  -webkit-box-sizing: content-box;
+          box-sizing: content-box;
 }
