--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -20,15 +20,32 @@ main{
         z-index: 1;
         border-radius: var(--bradius);
         overflow: hidden;
-        box-shadow: 0px 0px 8px 0px #000000;
+       
+        transition: all 0.3s ease-in-out;
+        &:hover{
+            transform: scale(110%);
+            box-shadow: 0px 0px 70px 0px #000000;
+        }
         iframe{
             overflow: hidden;
-            z-index: 10;
+            z-index: 9;
             position: absolute;
             border-radius: var(--bradius);
             width: 100%;
             height: 100%;
             box-sizing: content-box; 
+        }
+        .overlay{
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(255, 0, 0, 0);
+            box-shadow: inset 0 0 70px #000000;
+            z-index: 10;
+            transition: all 0.3s ease-in-out;
+            &:hover{
+                box-shadow: none;
+            }
         }
     }
 }
