--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -23,12 +23,12 @@ main{
        
         transition: all 0.3s ease-in-out;
         &:hover{
-            transform: scale(110%);
+            transform: scale(105%);
             box-shadow: 0px 0px 70px 0px #000000;
         }
         iframe{
             overflow: hidden;
-            z-index: 9;
+            z-index: 3;
             position: absolute;
             border-radius: var(--bradius);
             width: 100%;
@@ -39,9 +39,9 @@ main{
             position: absolute;
             width: 100%;
             height: 100%;
-            background-color: rgba(255, 0, 0, 0);
-            box-shadow: inset 0 0 70px #000000;
-            z-index: 10;
+            // background-color: rgba(255, 0, 0, 0);
+            box-shadow: inset 0 0 50px #000000;
+            z-index: 4;
             transition: all 0.3s ease-in-out;
             &:hover{
                 box-shadow: none;
