--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -7,21 +7,21 @@ main{
         flex-direction: row;
         flex-wrap: wrap;
         justify-content: center;
-        background-color: rgb(167, 167, 167);
+        background-color: rgb(44, 44, 44);
         border-radius: var(--bradius);
         margin: 20px;
     }
     .project{
         position: relative;
         margin: 20px;
-        background-color: gray;
+        background-color: rgba(128, 128, 128, 0);
         width: 400px;
         height: 800px;
         z-index: 1;
         border-radius: var(--bradius);
         overflow: hidden;
-       
-        transition: all 0.3s ease-in-out;
+        box-shadow: inset 0 0 50px #000000;
+        transition: all 0.4s ease-in-out;
         &:hover{
             transform: scale(105%);
             box-shadow: 0px 0px 70px 0px #000000;
@@ -33,7 +33,9 @@ main{
             border-radius: var(--bradius);
             width: 100%;
             height: 100%;
-            box-sizing: content-box; 
+            perspective: 1000;
+           
+           // box-sizing: content-box; 
         }
         .overlay{
             position: absolute;
@@ -42,7 +44,7 @@ main{
             // background-color: rgba(255, 0, 0, 0);
             box-shadow: inset 0 0 50px #000000;
             z-index: 4;
-            transition: all 0.3s ease-in-out;
+            transition: all 0.4s ease-in-out;
             &:hover{
                 box-shadow: none;
             }
