--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 :root {
-  --bradius: 25px;
+  --bradius: 15px;
+  --bradius2: 16px;
 }
 
 body {
@@ -42,7 +43,7 @@ main .finished, main .wip {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  background-color: #a7a7a7;
+  background-color: #2c2c2c;
   border-radius: var(--bradius);
   margin: 20px;
 }
@@ -50,14 +51,16 @@ main .finished, main .wip {
 main .project {
   position: relative;
   margin: 20px;
-  background-color: gray;
+  background-color: rgba(128, 128, 128, 0);
   width: 400px;
   height: 800px;
   z-index: 1;
   border-radius: var(--bradius);
   overflow: hidden;
-  -webkit-transition: all 0.3s ease-in-out;
-  transition: all 0.3s ease-in-out;
+  -webkit-box-shadow: inset 0 0 50px #000000;
+          box-shadow: inset 0 0 50px #000000;
+  -webkit-transition: all 0.4s ease-in-out;
+  transition: all 0.4s ease-in-out;
 }
 
 main .project:hover {
@@ -74,8 +77,8 @@ main .project iframe {
   border-radius: var(--bradius);
   width: 100%;
   height: 100%;
-  -webkit-box-sizing: content-box;
-          box-sizing: content-box;
+  -webkit-perspective: 1000;
+          perspective: 1000;
 }
 
 main .project .overlay {
@@ -85,8 +88,8 @@ main .project .overlay {
   -webkit-box-shadow: inset 0 0 50px #000000;
           box-shadow: inset 0 0 50px #000000;
   z-index: 4;
-  -webkit-transition: all 0.3s ease-in-out;
-  transition: all 0.3s ease-in-out;
+  -webkit-transition: all 0.4s ease-in-out;
+  transition: all 0.4s ease-in-out;
 }
 
 main .project .overlay:hover {
