--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -49,5 +49,15 @@ main{
                 box-shadow: none;
             }
         }
+        .toolbar{
+            position: absolute;
+            width: 100px;
+            height: 40px;
+            z-index: 10;
+            top: 10px;
+            right: 10px;
+            background-color: rgba(129, 129, 129, 0.459);
+            border-radius: var(--bradius);
+        }
     }
 }
