--- a/style.css
+++ b/style.css
@@ -96,3 +96,14 @@ main .project .overlay:hover {
   -webkit-box-shadow: none;
           box-shadow: none;
 }
+
+main .project .toolbar {
+  position: absolute;
+  width: 100px;
+  height: 40px;
+  z-index: 10;
+  top: 10px;
+  right: 10px;
+  background-color: rgba(129, 129, 129, 0.459);
+  border-radius: var(--bradius);
+}
