--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -34,7 +34,6 @@ main{
             width: 100%;
             height: 100%;
             perspective: 1000;
-           
            // box-sizing: content-box; 
         }
         .overlay{
@@ -49,15 +48,39 @@ main{
                 box-shadow: none;
             }
         }
-        .toolbar{
+        #toolbar{
             position: absolute;
-            width: 100px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 150px;
             height: 40px;
             z-index: 10;
-            top: 10px;
-            right: 10px;
-            background-color: rgba(129, 129, 129, 0.459);
-            border-radius: var(--bradius);
+            top: -30px;
+            left: 0;
+            right: 0;
+            margin-right: auto;
+            margin-left: auto;
+            z-index: 8;
+            background-color: rgba(129, 129, 129, 0.1);
+            border-radius: 0 0 var(--bradius) var(--bradius) ;
+            box-shadow: inset 0 0 10px #0000000c;
+            transition: all 0.3s ease-in-out;
+            &:hover{
+                //transform: scale(110%);
+                background-color: rgba(129, 129, 129, 1);
+                box-shadow: inset 0 0 10px #0000006c;
+                top: -5px;
+            }
+            #xbutton{
+                width: 30%;
+                height: 60%;
+                transition: all 0.1s ease-in-out;
+                &:hover{
+                    transform: scale(110%);
+                }
+            }
         }
+
     }
 }
