--- a/style.css
+++ b/style.css
@@ -97,13 +97,49 @@ main .project .overlay:hover {
           box-shadow: none;
 }
 
-main .project .toolbar {
+main .project #toolbar {
   position: absolute;
-  width: 100px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 150px;
   height: 40px;
   z-index: 10;
-  top: 10px;
-  right: 10px;
-  background-color: rgba(129, 129, 129, 0.459);
-  border-radius: var(--bradius);
+  top: -30px;
+  left: 0;
+  right: 0;
+  margin-right: auto;
+  margin-left: auto;
+  z-index: 8;
+  background-color: rgba(129, 129, 129, 0.1);
+  border-radius: 0 0 var(--bradius) var(--bradius);
+  -webkit-box-shadow: inset 0 0 10px #0000000c;
+          box-shadow: inset 0 0 10px #0000000c;
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+}
+
+main .project #toolbar:hover {
+  background-color: #818181;
+  -webkit-box-shadow: inset 0 0 10px #0000006c;
+          box-shadow: inset 0 0 10px #0000006c;
+  top: -5px;
+}
+
+main .project #toolbar #xbutton {
+  width: 30%;
+  height: 60%;
+  -webkit-transition: all 0.1s ease-in-out;
+  transition: all 0.1s ease-in-out;
+}
+
+main .project #toolbar #xbutton:hover {
+  -webkit-transform: scale(110%);
+          transform: scale(110%);
 }
