--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -12,40 +12,50 @@ main{
         margin: 20px;
     }
     .project{
+        
         position: relative;
         margin: 20px;
         background-color: rgba(128, 128, 128, 0);
         width: 400px;
         height: 800px;
         z-index: 1;
-        border-radius: var(--bradius);
+        border-radius: 14px;
         overflow: hidden;
-        box-shadow: inset 0 0 50px #000000;
+       // box-shadow: inset 0 0 50px #000000;
         transition: all 0.4s ease-in-out;
+
         &:hover{
-            transform: scale(105%);
+            transform: scale(var(--scale));
             box-shadow: 0px 0px 70px 0px #000000;
         }
         iframe{
-            overflow: hidden;
+            
+           // overflow: hidden;
             z-index: 3;
             position: absolute;
             border-radius: var(--bradius);
             width: 100%;
             height: 100%;
             perspective: 1000;
+            
            // box-sizing: content-box; 
         }
         .overlay{
+            
             position: absolute;
             width: 100%;
             height: 100%;
+            //background-color: rgba(0, 0, 0, 0.048);
             // background-color: rgba(255, 0, 0, 0);
-            box-shadow: inset 0 0 50px #000000;
+            box-shadow: inset 0px 0 50px #000000 ;
+            // filter: drop-shadow(0px 0px 10px rgba(0,0,0,.5));
+            border-radius: 13px; 
             z-index: 4;
             transition: all 0.4s ease-in-out;
+            
             &:hover{
                 box-shadow: none;
+                //background-color: rgba(0, 0, 0, 0);
             }
         }
         #toolbar{
@@ -56,13 +66,15 @@ main{
             width: 200px;
             height: 40px;
             z-index: 10;
-            top: -30px;
+            top: -5px;
             left: 0;
             right: 0;
             margin-right: auto;
             margin-left: auto;
             z-index: 8;
-            background-color: rgba(129, 129, 129, 0.1);
+            border: 1px solid black;
+            background-color: rgb(195, 195, 195);
+            opacity: 0.2;
             border-radius: 0 0 var(--bradius) var(--bradius) ;
             box-shadow: inset 0 0 10px #0000000c;
             transition: all 0.3s ease-in-out;
@@ -71,14 +83,16 @@ main{
             }
             &:hover{
                 //transform: scale(110%);
-                background-color: rgba(129, 129, 129, 1);
+                background-color: rgb(193, 193, 193);
                 box-shadow: inset 0 0 10px #0000006c;
                 top: -5px;
+                opacity: 1;
             }
             #xbutton{
                 width: 30%;
                 height: 60%;
                 transition: all 0.1s ease-in-out;
+                cursor: pointer;
                 &:hover{
                     transform: scale(110%);
                 }
