added overflow hidden on main

--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -4,6 +4,7 @@ main{
     flex-wrap: wrap;
     margin: 0;
     padding: 0;
+    overflow: hidden;
     .finished,.wip{
         width: 100%;
         display: flex;
