--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -6,7 +6,7 @@ main{
     padding: 0;
     overflow: hidden;
     .finished,.wip{
-        width: 100%;
+        width: 100vw;
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
@@ -27,7 +27,7 @@ main{
         position: relative;
         margin: 20px;
         background-color: rgba(128, 128, 128, 0);
-        width: 400px;
+        width: 30%;
         height: 800px;
         z-index: 1;
         
@@ -41,6 +41,20 @@ main{
             transform: scale(var(--scale));
             box-shadow: 0px 0px 70px 0px #000000;
         }
+        // @media (max-width: 1900px) {
+        //     width: 30%;
+
+        // }
+        @media (max-width: 1300px) {
+            width: 45%;
+
+        }
+        @media (max-width: 1000px) {
+            width: 100%;
+            
+        }
+
+
         iframe{
             
            // overflow: hidden;
@@ -114,5 +128,9 @@ main{
             }
         }
 
+    }
+    @media (max-width: 1000px) {
+        width: 100%;
+        
     }
 }
