--- a/style.css
+++ b/style.css
@@ -57,8 +57,9 @@ main .finished, main .wip {
 main .main-overlay {
   background-color: rgba(0, 0, 0, 0.63);
   position: absolute;
-  width: 150vw;
-  height: 300vh;
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
   z-index: 5;
 }
 
@@ -88,7 +89,7 @@ main .project:hover {
   }
 }
 
-@media (max-width: 1000px) {
+@media (max-width: 900px) {
   main .project {
     width: 100%;
   }
