--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -5,8 +5,9 @@ main{
     margin: 0;
     padding: 0;
     overflow: hidden;
+    width: 100%;
     .finished,.wip{
-        width: 100vw;
+        width: 100%;
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
