--- a/style.css
+++ b/style.css
@@ -33,10 +33,11 @@ main {
   margin: 0;
   padding: 0;
   overflow: hidden;
+  width: 100%;
 }
 
 main .finished, main .wip {
-  width: 100vw;
+  width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
