--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -15,6 +15,10 @@ main{
         background-color: rgb(44, 44, 44);
         border-radius: var(--bradius);
         margin: 20px;
+        @media (max-width: 700px) {
+            margin: 0;
+            
+        }
     }
     .main-overlay{
         background-color: rgba(0, 0, 0, 0.63);
@@ -25,7 +29,6 @@ main{
         z-index: 5;
     }
     .project{
-        
         position: relative;
         margin: 20px;
         background-color: rgba(128, 128, 128, 0);
@@ -38,7 +41,7 @@ main{
        // box-shadow: inset 0 0 50px #000000;
        
         transition: all var(--transitiontime) ease-in-out;
-
+       // width: 600px; height: 390px; padding: 0; overflow: hidden;
         &:hover{
             transform: scale(var(--scale));
             box-shadow: 0px 0px 70px 0px #000000;
@@ -66,9 +69,19 @@ main{
             width: 100%;
             height: 100vh;
             perspective: 1000;
-            
+            width: 250%;
+            height: 2000px;
+            transform: scale(40%);
+            transform-origin: 0 0;//todo view desktop
+            // width: 800px; height: 520px; border: 1px solid black;
            // box-sizing: content-box; 
+
         }
+        // &:hover{
+        //     width: 100%;
+        //     height: 100vh;
+        //     transform: scale(100%);
+        // }
         .overlay{
             
             position: absolute;
