--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -56,6 +56,7 @@ main{
         }
         @media (max-width: 900px) {
             width: 100%;
+            height: 100vh;
             
         }
 
@@ -70,7 +71,7 @@ main{
             height: 100vh;
             perspective: 1000;
             width: 250%;
-            height: 2000px;
+            height: 250%;
             transform: scale(40%);
             transform-origin: 0 0;//todo view desktop
             // width: 800px; height: 520px; border: 1px solid black;
