--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -72,7 +72,7 @@ main{
             perspective: 1000;
             width: 250%;
             height: 250%;
-            transform: scale(40%);
+            transform: scale(0.4);
             transform-origin: 0 0;//todo view desktop
             // width: 800px; height: 520px; border: 1px solid black;
            // box-sizing: content-box; 
@@ -139,7 +139,7 @@ main{
                 transition: all 0.1s ease-in-out;
                 cursor: pointer;
                 &:hover{
-                    transform: scale(110%);
+                    transform: scale(1.1);
                 }
             }
         }
