--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 :root {
   --bradius: 15px;
   --bradius2: 16px;
-  --scale: 105%;
+  --scale: 1.05;
   --transitiontime:  0.6s;
 }
 
@@ -113,8 +113,8 @@ main .project iframe {
           perspective: 1000;
   width: 250%;
   height: 250%;
-  -webkit-transform: scale(40%);
-          transform: scale(40%);
+  -webkit-transform: scale(0.4);
+          transform: scale(0.4);
   -webkit-transform-origin: 0 0;
           transform-origin: 0 0;
 }
@@ -191,8 +191,8 @@ main .project #toolbar #xbutton {
 }
 
 main .project #toolbar #xbutton:hover {
-  -webkit-transform: scale(110%);
-          transform: scale(110%);
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
 }
 
 @media (max-width: 1000px) {
