--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -138,7 +138,7 @@ main{
                 top: -5px;
                 opacity: 1;
             }
-            #xbutton{
+            img{
                 pointer-events: all;
                 width: 30%;
                 height: 60%;
